# perceptron

./: .astylerc  CMakeLists.txt  README.md  main.cpp
io/: csvreader.cpp  csvreader.hpp  filereader.cpp  filereader.hpp  filewriter.cpp  filewriter.hpp
linalg/: linalg.hpp  matrix.hpp  vector.hpp
mathstat/: distribution.cpp  distribution.hpp  uniformdistribution.cpp  uniformdistribution.hpp
nn/: perceptron.hpp
